Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntegerNumberField.quorum
class Main
    integer v = Test()
    action Main
    end

    action Test() returns integer
        number var = 5.0
        return var
    end
end